--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -32,18 +32,28 @@
             <converters:RedDocumentTemplateSelector x:Key="RedDocumentTemplateSelector"
                                                    MainTemplate="{StaticResource MainTemplate}"
                                                    BufferTemplate="{StaticResource BufferTemplate}" />
+            <Style x:Key="WolvenKitTabItem" TargetType="{x:Type syncfusion:TabItemExt}">
+                
+            </Style>
         </Grid.Resources>
 
-        <syncfusion:TabControlExt x:Name="TabControl"
-                       ItemsSource="{Binding TabItemViewModels, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                       SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                       SelectedItem="{Binding SelectedTabItemViewModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                       ContentTemplateSelector="{StaticResource RedDocumentTemplateSelector}"
-                                  CloseButtonType="Hide"
-                                  EnableLabelEdit="False"
-                                  BorderThickness="0,0,0,1"
-                                  Padding="0,3,0,0"
-                       >
+        <syncfusion:TabControlExt
+            x:Name="TabControl"
+            ItemsSource="{Binding TabItemViewModels, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedTabItemViewModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            ContentTemplateSelector="{StaticResource RedDocumentTemplateSelector}"
+            CloseButtonType="Hide"
+            EnableLabelEdit="False"
+            AllowDragDrop="False"
+            Margin="-3,-2,-3,-3"
+            BorderThickness="0,0,0,0"
+            Padding="0"
+            TabItemSelectedForeground="White"
+            TabItemHoverBackground="{StaticResource WolvenKitRedShadow}"
+            TabItemHoverBorderBrush="{StaticResource WolvenKitRedShadow}"
+            TabItemSelectedBackground="{StaticResource WolvenKitRed}"
+            TabItemSelectedBorderBrush="{StaticResource WolvenKitCyan}">
         </syncfusion:TabControlExt>
         
        
