--- a/WolvenKit/Views/Tools/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Tools/ProjectExplorerView.xaml
@@ -45,7 +45,16 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <syncfusion:TabControlExt Name="tabControl" Height="28" CloseButtonType="Hide" BorderThickness="0,0,0,1" Margin="0,3,0,0">
+        <syncfusion:TabControlExt
+            Name="tabControl" Height="25" CloseButtonType="Hide"
+            
+            Margin="0,0,0,0"
+            BorderThickness="0,0,0,1"
+            TabItemSelectedForeground="White"
+            TabItemHoverBackground="{StaticResource WolvenKitRedShadow}"
+            TabItemHoverBorderBrush="{StaticResource WolvenKitRedShadow}"
+            TabItemSelectedBackground="{StaticResource WolvenKitRed}"
+            TabItemSelectedBorderBrush="{StaticResource WolvenKitCyan}">
             <syncfusion:TabItemExt Header="Source Files" />
             <syncfusion:TabItemExt Header="Packed Files" />
         </syncfusion:TabControlExt>
@@ -215,13 +224,67 @@
                                             </MultiDataTrigger>
                                         </Style.Triggers>
                                     </Style>
+                                    <Style x:Key="FolderIcon" TargetType="{x:Type iconPacks:PackIconControl}">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                        <Setter Property="Kind" Value="{x:Static iconPacks:PackIconMaterialKind.Folder}" />
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Extension}" Value="ModDirectoryTop">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                                <Setter Property="Foreground" Value="{StaticResource WolvenKitRed}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Extension}" Value="RawDirectoryTop">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                                <Setter Property="Foreground" Value="{StaticResource WolvenKitTan}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Extension}" Value="ScriptDirectoryTop">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                                <Setter Property="Foreground" Value="{StaticResource WolvenKitCyan}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Extension}" Value="TweakDirectoryTop">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                                <Setter Property="Foreground" Value="{StaticResource WolvenKitPurple}" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Extension}" Value="OpenDirImageKey">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                                <Setter Property="Foreground" Value="{StaticResource WolvenKitTan}" />
+                                            </DataTrigger>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding Path=IsExpanded, RelativeSource={RelativeSource AncestorType={x:Type syncfusion:TreeGridExpanderCell}}}" Value="True" />
+                                                    <Condition Binding="{Binding Path=HasChildNodes, RelativeSource={RelativeSource AncestorType={x:Type syncfusion:TreeGridExpanderCell}}}" Value="True" />
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Kind" Value="{x:Static iconPacks:PackIconMaterialKind.FolderOpen}" />
+                                            </MultiDataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                    <Style x:Key="NormalIcon" TargetType="{x:Type Image}" BasedOn="{StaticResource FileIcons}">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                        <Style.Triggers>
+                                            <DataTrigger  Binding="{Binding Extension}" Value="ModDirectoryTop">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                            <DataTrigger  Binding="{Binding Extension}" Value="RawDirectoryTop">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                            <DataTrigger  Binding="{Binding Extension}" Value="ScriptDirectoryTop">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                            <DataTrigger  Binding="{Binding Extension}" Value="TweakDirectoryTop">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                            <DataTrigger  Binding="{Binding Extension}" Value="OpenDirImageKey">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
                                 </Grid.Resources>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="13" />
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <Image Height="13" Style="{DynamicResource FileIcons}" />
+                                <Image Height="13" Style="{StaticResource NormalIcon}" />
+                                <iconPacks:PackIconControl Style="{StaticResource FolderIcon}" Width="13" Height="19"/>
                                 <TextBlock
                                     x:Name="TemplateTextBlock"
                                     Grid.Column="1"
@@ -229,10 +292,26 @@
                                     VerticalAlignment="Center"
                                     Text="{Binding Path=Name}" />
                                 <StackPanel Orientation="Horizontal" Grid.Column="2" Background="{StaticResource ContentBackground}">
-                                    <helpers:TreeGridButton Style="{StaticResource WolvenKitTreeGridButton}" Content="Open" Command="{Binding OpenFileCommand}" ToolTip="Open this file" BorderBrush="{StaticResource Border}" HoverBackground="{StaticResource BorderAlt}" PressedBackground="Blue"/>
-                                    <helpers:TreeGridButton Style="{StaticResource WolvenKitTreeGridButtonDirectory}" Command="{Binding DeleteFileCommand}" ToolTip="Delete this file/folder" BorderBrush="#DF2935" HoverBackground="DarkRed" PressedBackground="Blue">
+                                    <helpers:TreeGridButton
+                                        Style="{StaticResource WolvenKitTreeGridButton}"
+                                        Command="{Binding OpenFileCommand}"
+                                        ToolTip="Open this file"
+                                        BorderBrush="{StaticResource WolvenKitCyan}"
+                                        HoverBackground="{StaticResource WolvenKitCyanShadow}">
                                         <helpers:TreeGridButton.Content>
-                                            <iconPacks:PackIconForkAwesome Kind="Trash" Height="11" Width="15"/>
+                                            <iconPacks:PackIconMaterial Kind="OpenInNew" Height="11" Width="11" Foreground="#222"
+                                        Margin="-1,0,0,0"/>
+                                        </helpers:TreeGridButton.Content>
+                                    </helpers:TreeGridButton>
+                                    <helpers:TreeGridButton
+                                        Style="{StaticResource WolvenKitTreeGridButtonDirectory}"
+                                        Command="{Binding DeleteFileCommand}"
+                                        ToolTip="Delete this file/folder"
+                                        BorderBrush="{StaticResource WolvenKitRed}"
+                                        HoverBackground="{StaticResource WolvenKitRedShadow}">
+                                        <helpers:TreeGridButton.Content>
+                                            <iconPacks:PackIconForkAwesome Kind="Trash" Height="11" Width="15"
+                                        Margin="-1,0,0,0"/>
                                         </helpers:TreeGridButton.Content>
                                     </helpers:TreeGridButton>
                                     <helpers:TreeGridButton Style="{StaticResource WolvenKitTreeGridButtonDirectory}" Width="0" Margin="0,0,10,0"/>
